# libs-corebase

./: .gitignore  ANNOUNCE  COPYING.LIB  ChangeLog  Doxyfile  GNUmakefile  INSTALL  Makefile.postamble  README  Version  configure  configure.ac
.github/scripts/: run-apple-tests.py  run-linux-tests.sh
.github/workflows/: apple-tests.yaml  compile.yaml  linux-compile-and-test.yaml  linux-tests.yaml
Documentation/: CompilingApplications.dox  ConfiguringAndCompiling.dox  DoxygenLayout.xml  ExampleEXUInt32.dox  MainPage.dox
Examples/: EXUInt32.c  EXUInt32.h
Headers/CoreFoundation/: CFArray.h  CFAttributedString.h  CFBag.h  CFBase.h  CFBase.h.in  CFBinaryHeap.h  CFBitVector.h  CFBundle.h  CFByteOrder.h  CFCalendar.h  CFCharacterSet.h  CFData.h  CFDate.h  CFDateFormatter.h  CFDictionary.h  CFError.h  CFLocale.h  CFNumber.h  CFNumberFormatter.h  CFPropertyList.h  CFRunLoop.h  CFRuntime.h  CFSet.h  CFSocket.h  CFStream.h  CFStreamPriv.h  CFString.h  CFStringEncodingExt.h  CFTimeZone.h  CFTree.h  CFURL.h  CFURLAccess.h  CFUUID.h  CFXMLNode.h  CFXMLParser.h  CoreFoundation.h  ForFoundationOnly.h  GSCharUtilities.h  GSCharacter.h  GSUnicode.h
Source/: CFArray.c  CFArray.m  CFAttributedString.c  CFBag.c  CFBase.c  CFBase.m  CFBinaryHeap.c  CFBitVector.c  CFBundle.m  CFByteOrder.c  CFByteOrder.m  CFCalendar.c  CFCharacterSet.c  CFConstantString.c  CFData.c  CFData.m  CFDate.c  CFDate.m  CFDateFormatter.c  CFDictionary.c  CFDictionary.m  CFError.c  CFError.m  CFLocale.c  CFNumber.c  CFNumber.m  CFNumberFormatter.c  CFPropertyList.c  CFPropertyList.m  CFRunLoop.c  CFRuntime.c  CFRuntime.m  CFSet.c  CFSocket.c  CFStream.c  CFStream.m  CFString.c  CFString.m  CFStringEncoding.c  CFStringFormat.c  (+47 more)
Tests/: CFTesting.h  GNUmakefile  GNUmakefile.super  Testing.h  run-apple-tests.sh  run-linux-tests.sh
Tests/CFArray/: api.m  bridge.m  create.m  mutablearray.m
Tests/CFAttributedString/: accessors.m  backlog.m  general.m  longest_range.m  multirun.m  mutable.m  set_clear.m
Tests/CFBag/: create.m  mutable.m
Tests/CFBase/: allocator.m  null.m  null_description.m
Tests/CFBinaryHeap/: api.m  general.m
Tests/CFBitVector/: TestInfo  api.m  general.m
Tests/CFCalendar/: basic.m  components.m  create.m  difference.m  ordinality.m  ranges.m
Tests/CFCharacterSet/: basic.m  bitmap.m  decomposable.m  misc.m  mutable.m  plane.m  predefined.m  range.m  setops.m
Tests/CFData/: api.m  basic.m  geometric_growth.m  replacebytes.m
Tests/CFDate/: addunits.m  basic.m  dayof.m  difference.m  gregorian.m  weekofyear.m
Tests/CFDateFormatter/: TestInfo  basic.m
Tests/CFDictionary/: bridge.m  create.m  create_duplicates.m  fast_enumeration.m  general.m  mutation.m
Tests/CFError/: create.m  userinfo.m
Tests/CFLocale/: bridge.m  create.c  create.m  displayvalues.m  general.m  identifier.m  values.m
Tests/CFNumber/: TestInfo  api.m  bridge.m  compare.m  general.m  gettype.m
Tests/CFNumberFormatter/: TestInfo  create.m  format.m  parse.m
Tests/CFPropertyList/: deepcopy.m  deepcopy_invalid.m  openstep.m  validate.m
Tests/CFRunLoop/: TestInfo  common_remove.m  membership.m  observer.m  observer_valid.m  source.m  source_accessors.m  source_invalidate.m  timer_accessors.m  timer_setfiredate.m  timers.m
Tests/CFRuntime/: TestInfo  runtime.m
Tests/CFSet/: create.m  create_duplicates.m  fast_enumeration.m  mutable.m  objc_bridge.m
Tests/CFSocket/: basic.m  general.m  peeraddr.m
Tests/CFStream/: getbuffer.m  lifecycle.m  no_error.m  read.m  read_atend.m  read_unopened.m  write.m  write_overflow.m
Tests/CFString/: TestInfo  accessors.m  anchored.m  append.m  bounds.m  bridge_encoding.m  caseinsensitive.m  compare.m  composedcharacters.m  composedcombining.m  create.m  decode.m  decode_utf32.m  editing.m  encodings.m  external_representation.m  external_utf8.m  findandreplace.m  findcharset.m  format.m  format_errors.m  format_float.m  format_int.m  format_misc.m  general.m  getbytes.m  getbytes_lossless.m  getbytes_utf16.m  getbytes_utf32.m  hash.m  mutablestring.m  nonlossy.m  normalize.m  numericwhitespace.m  objc_bridge.m  objc_bridge_from_cf.m  search.m  surrogate.m
Tests/CFStringEncoding/: convert.m  iana.m
Tests/CFTimeZone/: GNUmakefile  basic.m  bridge.m  cache_retain.m  create.m  general.m  gmt.m  gmt_name.m
Tests/CFTree/: api.m  basic.m  context.m  sort.m
Tests/CFURL/: TestInfo  accessors.m  byte_range.m  create.m  escaping.m  file_system_path.m  path_accessors.m  path_createcopy.m  port.m  ref_resolution.m
Tests/CFURLAccess/: TestInfo  basic.m
Tests/CFUUID/: api.m  create.m  string_format.m
Tests/CFXMLNode/: basic.m  equal.m  typecode.m
Tests/CFXMLParser/: escaping.m
Tools/: GNUmakefile  make_c_interface.m  types.plist
autom4te.cache/: output.0  requests  traces.0
